@@ -2629,6 +2629,7 @@ DRIVER(comet,l5)        //          06/85 W Comet (L-5)
 DRIVER(alcat,l7)        //S11-918:  ??/85 W Alley Cats (Shuffle)
 DRIVER(hs,l3)           //S11-541:  01/86 W High Speed (L-3)
 DRIVER(hs,l4)           //          01/86 W High Speed (L-4)
+DRIVER(hs,p4g)          //          01/86 W High Speed (G-4 / German PROTO4)
 DRIVER(hs,l4c)          //          05/18 W High Speed (L-4C Competition MOD (f43c))
 DRIVER(grand,l1)        //S11-523:  04/86 W Grand Lizard (L-1)
 DRIVER(grand,l3)        //          04/86 W Grand Lizard (L-3)
