@@ -9,9 +9,10 @@ Version 3.7 (XX XXth, 2025) - ""
 Users now can set the 'serial_device' setting (registry key) to a COM port,
 to attach to the WPC/WPC95 serial printer interface.
 
-*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan
+*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner
 Clones:
 Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
+High Speed (G-4 aka German PROTO4)
 Soccer Kings (alternate set 2)
 Victory (1.1 multiplayer MOD), (1.2 multiplayer MOD)
 
